# python-deltasigma

./: .gitignore  .travis.yml  LICENSE  LICENSE-MIT  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-conda.yml  python-package.yml
deltasigma/: __init__.py  _changeFig.py  _config.py  _evalTFP.py  _lollipop.py  _simulateMS.py  _simulateMS_python.py  _simulateSNR.py
deltasigma/tests/: test_bplogsmooth.py  test_bquantize.py  test_calculateSNR.py  test_db.py  test_exampleMASH.py  test_simulateMS.py
deltasigma/tests/test_data/: test_simulateMS.m
examples/: MASH_example.ipynb
