[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deltasigma"
version = "0.2.7"
authors = [
    {name = "Giuseppe Venturini and others", email = "giuseppe.g.venturini@ieee.org"},
]
description = "a Python package to synthesize, simulate, scale and map to implementable topologies delta sigma modulators."
license = {text = "BSD"}
keywords = ["delta sigma modulator simulator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
dynamic = ["readme"]

[project.urls]
"Homepage" = "http://github.com/ggventurini/python-deltasigma"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["pypi_description.rst", "CHANGES.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
exclude = ["beta"]

[tool.setuptools.package-data]
deltasigma = ["tests/test_data/*.mat", "tests/test_data/*.txt"]
